--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@taquito/beacon-wallet": "^11.1.0",
-    "@taquito/taquito": "^11.1.0",
-    "next": "12.1",
+    "@taquito/beacon-wallet": "^12.1.0",
+    "@taquito/taquito": "^12.1.0",
+    "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-player": "^2.10.0",
-    "sass": "^1.49.9"
+    "react-player": "^2.10.1",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1"
+    "eslint-config-next": "^12.1.6"
   }
 }
