--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@taquito/beacon-wallet": "^12.1.0",
     "@taquito/taquito": "^12.1.0",
-    "next": "^12.1.6",
+    "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.10.1",
