--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@taquito/beacon-wallet": "^12.1.0",
-    "@taquito/taquito": "^12.1.0",
-    "next": "12.1.6",
+    "@taquito/beacon-wallet": "^13.0.1",
+    "@taquito/taquito": "^13.0.1",
+    "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.10.1",
