--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-test",
+  "name": "gletchard",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,9 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@taquito/beacon-wallet": "^13.0.1",
-    "@taquito/taquito": "^13.0.1",
-    "next": "12.1.6",
+    "@taquito/beacon-wallet": "^19.1.0",
+    "@taquito/taquito": "^19.1.0",
+    "next": "^12.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.10.1",
